@@ -173,18 +173,18 @@ Feature: Various utility commands.
 
     @no_xvfb @posix @qtwebengine_skip
     Scenario: Inspector smoke test
-        When I run :inspector
+        When I run :devtools
         And I wait for "Focus object changed: <PyQt5.QtWebKitWidgets.QWebView object at *>" in the log
-        And I run :inspector
+        And I run :devtools
         And I wait for "Focus object changed: *" in the log
         Then no crash should happen
 
     # Different code path as an inspector got created now
     @no_xvfb @posix @qtwebengine_skip
     Scenario: Inspector smoke test 2
-        When I run :inspector
+        When I run :devtools
         And I wait for "Focus object changed: <PyQt5.QtWebKitWidgets.QWebView object at *>" in the log
-        And I run :inspector
+        And I run :devtools
         And I wait for "Focus object changed: *" in the log
         Then no crash should happen
 
